--- a/Tables in loop.ipynb
+++ b/Tables in loop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOGHRWuc/aXRuMSKPQ56T04",
+      "authorship_tag": "ABX9TyMdqeRCmQmfPQhWAVQzImGk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "for i in range(3,31,3):\n",
         "  print(i)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +73,7 @@
         "for i in range(1,11):\n",
         "  print(i, 'x', 3, '=', i*3)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
         "for i in range(1,21):\n",
         "  print(5,\"x\",i,\"=\",i*5)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "for i in range (1,11):\n",
         "  print(1,\"x\",i,\"=\",1*i,\"     \",\"\",2,\"x\",i,\"=\",2*i,\"     \",\"\",3,\"x\",i,\"=\",3*i,\"     \",\"\",4,\"x\",i,\"=\",4*i,\"   \",\"\",5,\"x\",i,\"=\",5*i,\"   \",\"\",6,\"x\",i,\"=\",6*i,\"    \",\"\",7,\"x\",i,\"=\",7*i,\"    \",\"\",8,\"x\",i,\"=\",8*i,\"    \",\"\",9,\"x\",i,\"=\",9*i,\"    \",\"\",10,\"x\",i,\"=\",10*i,\" \")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "    print(i, 'x', j, '=', i*j)\n",
         "  print()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
         "for i in range (1,11):\n",
         "  print(2,\"x\",i,\"=\",i*2)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
         "    print(i,\"x\",j,\"=\",i*j)\n",
         "  print('\\n',)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +485,82 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n5lDUC-YnwRb"
+        "id": "n5lDUC-YnwRb",
+        "outputId": "afe0e63e-bd00-4286-dc23-da8bc11af662",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a=[\"Apple\",\"Ball\",\"Cat\",\"Dog\",\"Elephant\",\"Fan\",\"Gun\"]\n",
+        "for i in a:\n",
+        "  print(i)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Apple\n",
+            "Ball\n",
+            "Cat\n",
+            "Dog\n",
+            "Elephant\n",
+            "Fan\n",
+            "Gun\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9XyqYoQLkUpE",
+        "outputId": "cd43fd94-1bb7-4bac-9218-0a45fbb21bef",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
+      },
+      "source": [
+        "a=[\"Red\",\"Blue\",\"Green\",\"Yellow\",\"Orange\",\"Violet\",\"Indigo\"]\n",
+        "b=['Tiger',\"lion\",'Peocock',\"Monkey\",\"Zebra\",\"Jiraff\",\"snake\",\"Fish\"]\n",
+        "c=[\"Alovera\",\"Sunflower\",\"Rose\",\"Marigold\",\"Jasmine\",\"lotus\",\"Cacttus\"]\n",
+        "d=[\"potato\",\"tomato\",\"onion\",\"cucmber\",\"Cauliflower\",\"ladyfinger\",\"pumpkin\"]\n",
+        "e=[\"Mango\",\"guava\",\"peach\",\"Avocado\",\"Banana\",\"Apricot\",\"Stowberry\"]\n",
+        "f=[\"Cricket\",\"Football\",\"Table tannies\",\"Batminton\",\"Volley ball\",\"Basket ball\"]\n",
+        "x=\"Colors\"\"  \"\"Animals\"\"  \"\"Plant\"\"  \"\"Vegetables\"\"  \"\"Fruits\"\"  \"\"Games\"\n",
+        "\n",
+        "#print(Choice)\n",
+        "x=int(input(\"Enter your choice :\"))\n",
+        "if x==Colors:\n",
+        "  print(a)\n",
+        "  elif x==Animals:\n",
+        "    print(b)\n",
+        "    elif x==Plant:\n",
+        "      print(c)\n",
+        "      \n",
+        "\n",
+        " #if i==colors\n",
+        "  #for i in range(colors)\n"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-930e72fd1e2e>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    elif Choice==Animals:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XXc3syJBqW1p"
       },
       "source": [
         ""
